
image_files = [
    'toolbar_icons/icon-animator.png',
    'toolbar_icons/icon-color.png',
    'toolbar_icons/icon-image.png',
    'toolbar_icons/icon-new_project.png',
    'toolbar_icons/icon-open_project.png',
    'toolbar_icons/icon-save.png',
    'toolbar_icons/icon-sound.png',
    'toolbar_icons/icon-text.png',
    'context_menu-bullet.png',
    'context_menu-check.png',
    'crop.png',
    'eflete.ico',
    'eflete.svg',
    'scale-larger.png',
    'scale-smaller.png',
    '___eflete_dummy_image___.png',
]

install_data(
  sources     : image_files,
  install_dir : join_paths(dir_pkgdata, 'images')
)