template_files = [
    'template.edc',
]

foreach edc_file : template_files
  custom_target('edje_cc_' + edc_file,
    input       : edc_file,
    depfile     : '@BASENAME@.edj.d',
    output      : '@BASENAME@.edj',
    command     : [
                   edje_cc_exe,
                   '-beta',
                   '-sd', join_paths(meson.current_source_dir(), 'sounds'),
                   '-id', join_paths(meson.current_source_dir(), 'images'),
                   '@INPUT@', '@OUTPUT@'
                  ],
    install     : true,
    install_dir : join_paths(dir_pkgdata, 'themes/default/template/edj'),
  )
endforeach

template_edc_files = [
  'widgets/access.edc',
  'widgets/button.edc',
  'widgets/conform.edc',
  'widgets/diskselector.edc',
  'widgets/frame.edc',
  'widgets/index.edc',
  'widgets/menu.edc',
  'widgets/panes.edc',
  'widgets/popup.edc',
  'widgets/separator.edc',
  'widgets/toolbar.edc',
  'widgets/actionslider.edc',
  'widgets/calendar.edc',
  'widgets/ctxpopup.edc',
  'widgets/entry.edc',
  'widgets/gengrid.edc',
  'widgets/label.edc',
  'widgets/multibuttonentry.edc',
  'widgets/photocam.edc',
  'widgets/progress.edc',
  'widgets/slider.edc',
  'widgets/tooltip.edc',
  'widgets/bg.edc',
  'widgets/check.edc',
  'widgets/cursor.edc',
  'widgets/fileselector.edc',
  'widgets/genlist.edc',
  'widgets/layout.edc',
  'widgets/naviframe.edc',
  'widgets/photo.edc',
  'widgets/radio.edc',
  'widgets/slideshow.edc',
  'widgets/video.edc',
  'widgets/border.edc',
  'widgets/clock.edc',
  'widgets/datetime.edc',
  'widgets/flipselector.edc',
  'widgets/hover.edc',
  'widgets/list.edc',
  'widgets/notify.edc',
  'widgets/player.edc',
  'widgets/scroller.edc',
  'widgets/spinner.edc',
  'widgets/win.edc',
  'widgets/bubble.edc',
  'widgets/colorsel.edc',
  'widgets/dayselector.edc',
  'widgets/focus.edc',
  'widgets/icon.edc',
  'widgets/map.edc',
  'widgets/panel.edc',
  'widgets/pointer.edc',
  'widgets/segment_control.edc',
  'widgets/thumb.edc',
  'macros.edc',
  'fonts.edc',
  'colorclasses.edc'
]

install_data(
  sources     : template_edc_files,
  install_dir : join_paths(dir_pkgdata, 'themes/default/template/edc')
)

template_image_files = [
  'images/access_glow.png',
  'images/bar_shine.png',
  'images/bevel_curved_horiz_out.png',
  'images/bevel_curved_vert_out.png',
  'images/bevel_dark_in.png',
  'images/bevel_dark_out.png',
  'images/bevel_horiz_out.png',
  'images/bevel_in.png',
  'images/bevel_out.png',
  'images/bg_glow_in.png',
  'images/bg_radgrad.png',
  'images/box_glow.png',
  'images/box_outline.png',
  'images/bub_base_b0.png',
  'images/bub_base_b1.png',
  'images/bub_base_b2.png',
  'images/bub_base_bl.png',
  'images/bub_base_br.png',
  'images/bub_base_tl.png',
  'images/bub_base_tr.png',
  'images/bub_over_bot.png',
  'images/bub_over_top.png',
  'images/button_clicked.png',
  'images/button_normal.png',
  'images/color_picker_alpha.png',
  'images/color_picker_brightness.png',
  'images/color_picker_color.png',
  'images/color_picker_opacity.png',
  'images/col_sel_end_bottom.png',
  'images/col_sel_end_top.png',
  'images/darken_rounded_square_half_h.png',
  'images/darken_rounded_square_half.png',
  'images/darken_rounded_square.png',
  'images/day_left_normal.png',
  'images/day_left_press.png',
  'images/day_left_selected.png',
  'images/day_middle_normal.png',
  'images/day_middle_press.png',
  'images/day_middle_selected.png',
  'images/day_right_normal.png',
  'images/day_right_press.png',
  'images/day_right_selected.png',
  'images/day_single_normal.png',
  'images/day_single_press.png',
  'images/day_single_selected.png',
  'images/diagonal_stripes.png',
  'images/digit_0.png',
  'images/digit_1.png',
  'images/digit_2.png',
  'images/digit_3.png',
  'images/digit_4.png',
  'images/digit_5.png',
  'images/digit_6.png',
  'images/digit_7.png',
  'images/digit_8.png',
  'images/digit_9.png',
  'images/digit_am.png',
  'images/digit_na.png',
  'images/digit_nm.png',
  'images/digit_pm.png',
  'images/dot_pattern.png',
  'images/downlight_glow_left.png',
  'images/downlight_glow.png',
  'images/downlight_glow_right.png',
  'images/downlight_glow_up.png',
  'images/emo-angry.png',
  'images/emo-angry-shout.png',
  'images/emo-crazy-laugh.png',
  'images/emo-evil-laugh.png',
  'images/emo-evil.png',
  'images/emo-goggle-smile.png',
  'images/emo-grumpy.png',
  'images/emo-grumpy-smile.png',
  'images/emo-guilty.png',
  'images/emo-guilty-smile.png',
  'images/emo-haha.png',
  'images/emo-half-smile.png',
  'images/emo-happy-panting.png',
  'images/emo-happy.png',
  'images/emo-indifferent.png',
  'images/emo-kiss.png',
  'images/emo-knowing-grin.png',
  'images/emo-laugh.png',
  'images/emo-little-bit-sorry.png',
  'images/emo-love-lots.png',
  'images/emo-love.png',
  'images/emo-minimal-smile.png',
  'images/emo-not-happy.png',
  'images/emo-not-impressed.png',
  'images/emo-omg.png',
  'images/emo-opensmile.png',
  'images/emo-smile.png',
  'images/emo-sorry.png',
  'images/emo-squint-laugh.png',
  'images/emo-surprised.png',
  'images/emo-suspicious.png',
  'images/emo-tongue-dangling.png',
  'images/emo-tongue-poke.png',
  'images/emo-uh.png',
  'images/emo-unhappy.png',
  'images/emo-very-sorry.png',
  'images/emo-what.png',
  'images/emo-wink.png',
  'images/emo-worried.png',
  'images/emo-wtf.png',
  'images/flip_shad.png',
  'images/frame_rounded.png',
  'images/glow_round_corners.png',
  'images/glow_small.png',
  'images/handle_pick_up_left.png',
  'images/handle_pick_up_right.png',
  'images/holes_horiz.png',
  'images/holes_tiny_glow_horiz.png',
  'images/holes_tiny_glow_vert.png',
  'images/holes_tiny_horiz.png',
  'images/holes_tiny_vert.png',
  'images/holes_vert.png',
  'images/hole_tiny.png',
  'images/horiz_glow_run_big.png',
  'images/horiz_glow_run.png',
  'images/horiz_glow_run_rev.png',
  'images/horizontal_separated_bar_small_glow.png',
  'images/icon_apps.png',
  'images/icon_arrow_down_left.png',
  'images/icon_arrow_down.png',
  'images/icon_arrow_down_right.png',
  'images/icon_arrow_left.png',
  'images/icon_arrow_right.png',
  'images/icon_arrow_up_left.png',
  'images/icon_arrow_up.png',
  'images/icon_arrow_up_right.png',
  'images/icon_border_remember.png',
  'images/icon_chat.png',
  'images/icon_clock.png',
  'images/icon_close.png',
  'images/icon_delete.png',
  'images/icon_edit.png',
  'images/icon_eject_mono.png',
  'images/icon_eject.png',
  'images/icon_file.png',
  'images/icon_folder.png',
  'images/icon_forward_mono.png',
  'images/icon_forward.png',
  'images/icon_head.png',
  'images/icon_home.png',
  'images/icon_info_mono.png',
  'images/icon_info.png',
  'images/icon_mute_mono.png',
  'images/icon_mute.png',
  'images/icon_next_mono.png',
  'images/icon_next.png',
  'images/icon_pause_mono.png',
  'images/icon_pause.png',
  'images/icon_play_mono.png',
  'images/icon_play.png',
  'images/icon_prev_mono.png',
  'images/icon_prev.png',
  'images/icon_refresh.png',
  'images/icon_rewind_mono.png',
  'images/icon_rewind.png',
  'images/icon_search.png',
  'images/icon_stop_mono.png',
  'images/icon_stop.png',
  'images/icon_volume_mono.png',
  'images/icon_volume.png',
  'images/inset_bar_horiz_base.png',
  'images/inset_bar_horiz_glow_base_double.png',
  'images/inset_bar_horiz_glow_base.png',
  'images/inset_bar_horiz_glow_inv_base_double.png',
  'images/inset_bar_horiz_glow_inv_base.png',
  'images/inset_bar_horiz_glow_inv_light.png',
  'images/inset_bar_horiz_glow_light.png',
  'images/inset_bar_horiz_glow_mid_base.png',
  'images/inset_bar_horiz_glow_mid_light.png',
  'images/inset_bar_horiz_inside_base.png',
  'images/inset_bar_horiz_inside_light.png',
  'images/inset_bar_horiz_light.png',
  'images/inset_bar_vert_base.png',
  'images/inset_bar_vert_glow_base_double.png',
  'images/inset_bar_vert_glow_base.png',
  'images/inset_bar_vert_glow_inv_base_double.png',
  'images/inset_bar_vert_glow_inv_base.png',
  'images/inset_bar_vert_glow_inv_light.png',
  'images/inset_bar_vert_glow_light.png',
  'images/inset_bar_vert_glow_mid_base.png',
  'images/inset_bar_vert_glow_mid_light.png',
  'images/inset_bar_vert_inside_base.png',
  'images/inset_bar_vert_inside_light.png',
  'images/inset_bar_vert_light.png',
  'images/inset_circle_tiny.png',
  'images/inset_shadow_circle_tiny.png',
  'images/inset_shadow.png',
  'images/inset_shadow_tiny.png',
  'images/knob_round_busy.png',
  'images/knob_round_small_busy.png',
  'images/knob_sz_04.png',
  'images/knob_sz_06.png',
  'images/knob_sz_08.png',
  'images/knob_sz_10.png',
  'images/knob_sz_12.png',
  'images/knob_sz_14.png',
  'images/knob_sz_16.png',
  'images/knob_sz_18.png',
  'images/knob_sz_20.png',
  'images/knob_sz_22.png',
  'images/knob_sz_24.png',
  'images/map_circle.png',
  'images/map_marker.png',
  'images/map_scale.png',
  'images/outline_glow.png',
  'images/pointer_hand1.png',
  'images/pointer.png',
  'images/ring_shadow.png',
  'images/ring_white_blue_glow.png',
  'images/ring_white_middle.png',
  'images/rounded_square.png',
  'images/runner_glow_horiz.png',
  'images/runner_glow_vert.png',
  'images/runner_horiz.png',
  'images/runner_vert.png',
  'images/separator_horiz.png',
  'images/shadow_angled_in_sides.png',
  'images/shadow_horiz.png',
  'images/shadow_inset_bevels.png',
  'images/shadow_rounded_horiz.png',
  'images/shadow_rounded_vert.png',
  'images/shadow_square_tiny.png',
  'images/shadow_vert.png',
  'images/shine.png',
  'images/slider_run_base_horiz.png',
  'images/slider_run_base_light_horiz.png',
  'images/slider_run_base_light_vert.png',
  'images/slider_run_base_vert.png',
  'images/slider_run_bevel_horiz.png',
  'images/slider_run_bevel_vert.png',
  'images/sym_check_alum.png',
  'images/sym_close_dark_normal.png',
  'images/sym_close_dark_selected.png',
  'images/sym_close_light_normal.png',
  'images/sym_close_light_selected.png',
  'images/sym_down_dark_normal.png',
  'images/sym_down_dark_selected.png',
  'images/sym_down_glow_normal.png',
  'images/sym_down_light_normal.png',
  'images/sym_down_light_selected.png',
  'images/sym_left_dark_normal.png',
  'images/sym_left_glow_normal.png',
  'images/sym_left_light_normal.png',
  'images/sym_radio_alum.png',
  'images/sym_right_dark_normal.png',
  'images/sym_right_glow_normal.png',
  'images/sym_right_light_normal.png',
  'images/sym_up_dark_normal.png',
  'images/sym_up_dark_selected.png',
  'images/sym_up_glow_normal.png',
  'images/sym_up_light_normal.png',
  'images/sym_up_light_selected.png',
  'images/tooltip-base.png',
  'images/tooltip-corner-bottom-left-tip.png',
  'images/tooltip-corner-bottom-right-tip.png',
  'images/tooltip-corner-top-left-tip.png',
  'images/tooltip-corner-top-right-tip.png',
  'images/tooltip-edge-bottom-tip.png',
  'images/tooltip-edge-left-tip.png',
  'images/tooltip-edge-right-tip.png',
  'images/tooltip-edge-top-tip.png',
  'images/vert_bar_inset.png',
  'images/vert_glow_run.png',
  'images/vert_glow_run_rev.png',
  'images/vertical_separated_bar_glow.png',
  'images/vgrad_med_curved.png',
  'images/vgrad_med_dark.png',
  'images/vgrad_med_lighter.png',
  'images/vgrad_shadow_bi.png',
  'images/white_bar_vert_glow.png',
  'images/win_glow.png',
  'images/win_shadow.png',
]

install_data(
  sources     : template_image_files,
  install_dir : join_paths(dir_pkgdata, 'themes/default/template/images')
)

template_sound_files = [
  'sounds/kbd-tap2.wav',
  'sounds/kbd-tap3.wav',
  'sounds/kbd-tap4.wav',
  'sounds/kbd-tap5.wav',
  'sounds/kbd-tap.wav',
]

install_data(
  sources     : template_sound_files,
  install_dir : join_paths(dir_pkgdata, 'themes/default/template/sounds')
)