src_test_ewe_ruler = files([
    'test_ewe_ruler.c',
    'ewe_ruler_add.c',
    'ewe_ruler_scale_add.c',
    'ewe_ruler_scale_del.c',
    'ewe_ruler_scale_visible_get.c',
    'ewe_ruler_scale_visible_set.c',
    'ewe_ruler_scale_middle_mark_get.c',
    'ewe_ruler_scale_middle_mark_set.c',
    'ewe_ruler_horizontal_get.c',
    'ewe_ruler_horizontal_set.c',
    'ewe_ruler_step_set.c',
    'ewe_ruler_step_get.c',
    'ewe_ruler_value_step_set.c',
    'ewe_ruler_value_step_get.c',
    'ewe_ruler_zero_offset_set.c',
    'ewe_ruler_zero_offset_get.c',
    'ewe_ruler_format_get.c',
    'ewe_ruler_format_set.c',
    'ewe_ruler_style_get.c',
    'ewe_ruler_style_set.c',
    'ewe_ruler_marker_style_get.c',
    'ewe_ruler_marker_style_set.c',
    'ewe_ruler_marker_absolute_get.c',
    'ewe_ruler_marker_absolute_set.c',
    'ewe_ruler_marker_relative_get.c',
    'ewe_ruler_marker_relative_set.c',
    'ewe_ruler_marker_visible_get.c',
    'ewe_ruler_marker_visible_set.c',
    'ewe_ruler_marker_add.c',
    'ewe_ruler_marker_del.c',
])

exe_ewe = executable('test_ewe_ruler', src_test_ewe_ruler,
  dependencies : test_deps,
  include_directories : [ include_directories('.'),
                          include_directories('..'), 
                          include_directories(join_paths('..','..')),                      
                          include_directories(join_paths('..','..','src/lib')),
                          include_directories(join_paths('..','..','src/bin')),
                          include_directories(join_paths('..','..','src/bin/alloc')),
                          include_directories(join_paths('..','..','src/bin/common')), 
                          include_directories(join_paths('..','..','src/bin/config')),
                          include_directories(join_paths('..','..','src/bin/editor')),
                          include_directories(join_paths('..','..','src/bin/external')),
                          include_directories(join_paths('..','..','src/bin/logger')),
                          include_directories(join_paths('..','..','src/bin/project_manager')),
                          include_directories(join_paths('..','..','src/bin/resource_manager')),
                          include_directories(join_paths('..','..','src/bin/ui')),
                          include_directories(join_paths('..','..','src/bin/ui/live_view')),
                          include_directories(join_paths('..','..','src/bin/ui/modal_window')),
                          include_directories(join_paths('..','..','src/bin/ui/live_view/elementary')),
                          include_directories(join_paths('..','..','src/bin/ui/property')),
                          include_directories(join_paths('..','..','src/bin/ui/shortcuts')),
                          include_directories(join_paths('..','..','src/bin/ui/sound_player')),
                          include_directories(join_paths('..','..','src/bin/ui/workspace')),
                          include_directories(join_paths('..','..','src/bin/ui/workspace')),
                          include_directories(join_paths('..','..','tests')),
                        ],
  install : false
)
test('Eflete - EWE Test Suit', exe_ewe)